--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "term-menu"
+name = "term-inquiry"
 version = "0.1.0"
 authors = ["Diego-Henriquez <diego@paragonpawns.com>"]
 edition = "2018"
@@ -7,9 +7,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ansi-builder = "0.1.0"
+ansi-builder = "0.1.3"
 termios = "0.3.3"
 
 [[example]]
 name = "list"
 path = "examples/list.rs"
+
+[[example]]
+name = "checkbox-list"
+path = "examples/checkbox_list.rs"
