updated Cargo.toml to publish crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "term-inquiry"
 version = "0.1.0"
 authors = ["Diego-Henriquez <diego@paragonpawns.com>"]
 edition = "2018"
+license = "MIT"
+readme = "README.md"
+repository = "https://github.com/ParagonPawns/term-inquiry"
+description = "Quick and easy way to make terminal inquiries using builder pattern."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
